// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jumps to the next question if there is one 1`] = `
Object {
  "entities": Object {
    "questions": Object {
      "allIds": Array [
        "question0",
        "question1",
      ],
      "byId": Object {
        "question0": Object {
          "answer": "8",
          "answerDesc": "Потому что Плутон больше не планета",
          "desc": "На этом месте будет описание ",
          "id": "question0",
          "media": Object {
            "type": "image",
            "uri": "https://",
          },
          "quest": "quest0",
          "questionText": "Сколько планет в солнечной системе?",
        },
        "question1": Object {
          "answer": "24",
          "answerDesc": "Хотелось бы больше, конечно",
          "desc": "На этом месте будет описание вопроса",
          "id": "question1",
          "media": Object {
            "type": "image",
            "uri": "https://",
          },
          "quest": "quest0",
          "questionText": "Сколько часов в сутках?",
        },
      },
    },
    "quests": Object {
      "allIds": Array [
        "quest0",
      ],
      "byId": Object {
        "quest0": Object {
          "cover": "http://...",
          "desc": "Description",
          "id": "quest0",
          "questionsInOrder": Array [
            "question0",
            "question1",
          ],
          "title": "Test",
        },
      },
    },
  },
  "progress": Object {
    "quest0": Object {
      "currentAnswer": "",
      "currentQuestion": "question1",
      "currentQuestionState": "UNANSWERED",
      "questState": "IN_PROGRESS",
    },
  },
}
`;

exports[`sets the quest as complete if it is a last question 1`] = `
Object {
  "entities": Object {
    "questions": Object {
      "allIds": Array [
        "question0",
        "question1",
      ],
      "byId": Object {
        "question0": Object {
          "answer": "8",
          "answerDesc": "Потому что Плутон больше не планета",
          "desc": "На этом месте будет описание ",
          "id": "question0",
          "media": Object {
            "type": "image",
            "uri": "https://",
          },
          "quest": "quest0",
          "questionText": "Сколько планет в солнечной системе?",
        },
        "question1": Object {
          "answer": "24",
          "answerDesc": "Хотелось бы больше, конечно",
          "desc": "На этом месте будет описание вопроса",
          "id": "question1",
          "media": Object {
            "type": "image",
            "uri": "https://",
          },
          "quest": "quest0",
          "questionText": "Сколько часов в сутках?",
        },
      },
    },
    "quests": Object {
      "allIds": Array [
        "quest0",
      ],
      "byId": Object {
        "quest0": Object {
          "cover": "http://...",
          "desc": "Description",
          "id": "quest0",
          "questionsInOrder": Array [
            "question0",
            "question1",
          ],
          "title": "Test",
        },
      },
    },
  },
  "progress": Object {
    "quest0": Object {
      "currentAnswer": "",
      "currentQuestion": "question1",
      "currentQuestionState": "UNANSWERED",
      "questState": "COMPLETED",
    },
  },
}
`;

exports[`sets the question state if the answer is correct 1`] = `
Object {
  "entities": Object {
    "questions": Object {
      "allIds": Array [
        "question0",
        "question1",
      ],
      "byId": Object {
        "question0": Object {
          "answer": "8",
          "answerDesc": "Потому что Плутон больше не планета",
          "desc": "На этом месте будет описание ",
          "id": "question0",
          "media": Object {
            "type": "image",
            "uri": "https://",
          },
          "quest": "quest0",
          "questionText": "Сколько планет в солнечной системе?",
        },
        "question1": Object {
          "answer": "24",
          "answerDesc": "Хотелось бы больше, конечно",
          "desc": "На этом месте будет описание вопроса",
          "id": "question1",
          "media": Object {
            "type": "image",
            "uri": "https://",
          },
          "quest": "quest0",
          "questionText": "Сколько часов в сутках?",
        },
      },
    },
    "quests": Object {
      "allIds": Array [
        "quest0",
      ],
      "byId": Object {
        "quest0": Object {
          "cover": "http://...",
          "desc": "Description",
          "id": "quest0",
          "questionsInOrder": Array [
            "question0",
            "question1",
          ],
          "title": "Test",
        },
      },
    },
  },
  "progress": Object {
    "quest0": Object {
      "currentAnswer": "8",
      "currentQuestion": "question0",
      "currentQuestionState": "CORRECT",
      "questState": "IN_PROGRESS",
    },
  },
}
`;

exports[`sets the question state if the answer is incorrect 1`] = `
Object {
  "entities": Object {
    "questions": Object {
      "allIds": Array [
        "question0",
        "question1",
      ],
      "byId": Object {
        "question0": Object {
          "answer": "8",
          "answerDesc": "Потому что Плутон больше не планета",
          "desc": "На этом месте будет описание ",
          "id": "question0",
          "media": Object {
            "type": "image",
            "uri": "https://",
          },
          "quest": "quest0",
          "questionText": "Сколько планет в солнечной системе?",
        },
        "question1": Object {
          "answer": "24",
          "answerDesc": "Хотелось бы больше, конечно",
          "desc": "На этом месте будет описание вопроса",
          "id": "question1",
          "media": Object {
            "type": "image",
            "uri": "https://",
          },
          "quest": "quest0",
          "questionText": "Сколько часов в сутках?",
        },
      },
    },
    "quests": Object {
      "allIds": Array [
        "quest0",
      ],
      "byId": Object {
        "quest0": Object {
          "cover": "http://...",
          "desc": "Description",
          "id": "quest0",
          "questionsInOrder": Array [
            "question0",
            "question1",
          ],
          "title": "Test",
        },
      },
    },
  },
  "progress": Object {
    "quest0": Object {
      "currentAnswer": "15",
      "currentQuestion": "question0",
      "currentQuestionState": "INCORRECT",
      "questState": "IN_PROGRESS",
    },
  },
}
`;

exports[`sets the question to show the correct answer 1`] = `
Object {
  "entities": Object {
    "questions": Object {
      "allIds": Array [
        "question0",
        "question1",
      ],
      "byId": Object {
        "question0": Object {
          "answer": "8",
          "answerDesc": "Потому что Плутон больше не планета",
          "desc": "На этом месте будет описание ",
          "id": "question0",
          "media": Object {
            "type": "image",
            "uri": "https://",
          },
          "quest": "quest0",
          "questionText": "Сколько планет в солнечной системе?",
        },
        "question1": Object {
          "answer": "24",
          "answerDesc": "Хотелось бы больше, конечно",
          "desc": "На этом месте будет описание вопроса",
          "id": "question1",
          "media": Object {
            "type": "image",
            "uri": "https://",
          },
          "quest": "quest0",
          "questionText": "Сколько часов в сутках?",
        },
      },
    },
    "quests": Object {
      "allIds": Array [
        "quest0",
      ],
      "byId": Object {
        "quest0": Object {
          "cover": "http://...",
          "desc": "Description",
          "id": "quest0",
          "questionsInOrder": Array [
            "question0",
            "question1",
          ],
          "title": "Test",
        },
      },
    },
  },
  "progress": Object {
    "quest0": Object {
      "currentAnswer": "",
      "currentQuestion": "question0",
      "currentQuestionState": "SHOW_ANSWER",
      "questState": "IN_PROGRESS",
    },
  },
}
`;

exports[`starts a quest 1`] = `
Object {
  "entities": Object {
    "questions": Object {
      "allIds": Array [
        "question0",
        "question1",
      ],
      "byId": Object {
        "question0": Object {
          "answer": "8",
          "answerDesc": "Потому что Плутон больше не планета",
          "desc": "На этом месте будет описание ",
          "id": "question0",
          "media": Object {
            "type": "image",
            "uri": "https://",
          },
          "quest": "quest0",
          "questionText": "Сколько планет в солнечной системе?",
        },
        "question1": Object {
          "answer": "24",
          "answerDesc": "Хотелось бы больше, конечно",
          "desc": "На этом месте будет описание вопроса",
          "id": "question1",
          "media": Object {
            "type": "image",
            "uri": "https://",
          },
          "quest": "quest0",
          "questionText": "Сколько часов в сутках?",
        },
      },
    },
    "quests": Object {
      "allIds": Array [
        "quest0",
      ],
      "byId": Object {
        "quest0": Object {
          "cover": "http://...",
          "desc": "Description",
          "id": "quest0",
          "questionsInOrder": Array [
            "question0",
            "question1",
          ],
          "title": "Test",
        },
      },
    },
  },
  "progress": Object {
    "quest0": Object {
      "currentAnswer": "",
      "currentQuestion": "question0",
      "currentQuestionState": "UNANSWERED",
      "questState": "IN_PROGRESS",
    },
  },
}
`;
